test/fail/MissingMainClass.java

// missing main class
class Test{

    int foo;

    int test(){
        String a ;
		String b ;
        if(a == b){
			a = "alain";
		}		
        return 0 ;
    }
	
}
